k8s/production/explorer-ui-v2/mainnet/all.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: explorer-ui-v2
    app.kubernetes.io/name: explorer-ui-v2
    app.kubernetes.io/part-of: chicmoz-prod
  name: explorer-ui-v2-mainnet
  namespace: chicmoz-prod
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: explorer-ui-v2
    network: mainnet
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-ui-v2
    app.kubernetes.io/name: explorer-ui-v2
    app.kubernetes.io/part-of: chicmoz-prod
  name: explorer-ui-v2-mainnet
  namespace: chicmoz-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-ui-v2
  template:
    metadata:
      labels:
        app: explorer-ui-v2
        network: mainnet
    spec:
      containers:
        - image: registry.digitalocean.com/aztlan-containers/explorer-ui-v2:mainnet-latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          name: explorer-ui-v2
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: registry-aztlan-containers
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: explorer-ui-v2
    app.kubernetes.io/part-of: chicmoz-prod
  name: explorer-ui-v2-mainnet
  namespace: chicmoz-prod
spec:
  hostnames:
    - aztecscan.xyz
    - mainnet.aztecscan.xyz
  parentRefs:
    - name: aztecscan-gateway
      sectionName: ui-primary-http
    - name: aztecscan-gateway
      sectionName: ui-primary-https
    - name: aztecscan-gateway
      sectionName: ui-mainnet-primary-http
    - name: aztecscan-gateway
      sectionName: ui-mainnet-primary-https
  rules:
    - backendRefs:
        - name: explorer-ui-v2-mainnet
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
